[gd_scene load_steps=4 format=3 uid="uid://cki5carrlqcf3"]

[ext_resource type="Script" path="res://start_menu/OptionsMenu.gd" id="1_b4ugi"]
[ext_resource type="AudioStream" uid="uid://bkxkg2r02rl40" path="res://Music/menu_music.ogg" id="2_xes4o"]
[ext_resource type="Texture2D" uid="uid://dkushodgai21s" path="res://assets/background.png" id="3_poguh"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b4ugi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_poguh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -113.0
offset_right = 113.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Large Text" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Large Text"

[node name="Dyslexia-Friendly  Font" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dyslexia-Friendly Font"

[node name="return" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xes4o")
autoplay = true

[connection signal="toggled" from="MarginContainer/VBoxContainer/Large Text" to="." method="_on_large_text_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Dyslexia-Friendly  Font" to="." method="_on_dyslexia_friendly__font_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/return" to="." method="_on_return_pressed"]
